JumpScript/tests/baselines/reference/propertyAccess3.errors.txt
tests/cases/compiler/propertyAccess3.jump(2,5): error TS2339: Property 'toBAZ' does not exist on type 'boolean'.


==== tests/cases/compiler/propertyAccess3.jump (1 errors) ====
    var foo: boolean;
    foo.toBAZ();
        ~~~~~
!!! error TS2339: Property 'toBAZ' does not exist on type 'boolean'.